# Pikey

./: CMakeLists.txt  CMakePresets.json  README.md
app/: pikey.cpp
include/Ext/: ini.h
include/Pikey/: daily.h  miscellaneous.h
src/: daily.cpp  miscellaneous.cpp
